# ICPP23_ORANGES

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SRC_FIDO_GDV_Calculation.cpp  eventgraph3523.graphml  fido.cfg  fido.json  gdv.py  gdv_calculation (1).pptx  gdv_tests.py  graal_v1.py  graph_align_fido.sh  main_code.cpp  main_code_v2.0.cpp  orbitinfo.tsv  orbitmatch.py  setup_fido.sh  slice_4.graphml  subtrees.py  subtrees2.py  test1.cpp  test2.cpp  test3.cpp  test4.cpp
ESSENS-master/: CMakeLists.txt
ESSENS-master/Core/Basic_IO/Format/Input/Level1/ADJ/: create_network.hpp
ESSENS-master/Core/Basic_IO/Format/Input/Level2/: input_to_network.hpp
ESSENS-master/Core/Basic_Traversal/Level2/ADJ/: find_Xneighbors.hpp
GRAAL/: CMakeLists.txt  GDV_functions.cpp  GDV_functions.hpp  bfs.hpp  class_definitions.hpp  combinations.hpp  graphn1.txt  junkfile.txt  main_code.cpp  main_code.cu  main_code_parallel.cpp  makefile  orbit_list.txt  print_disconnected_graph.hpp  runtime_visualization.py  sgraph1.txt  sgraph2.txt  sgraph3.txt
GRAAL/debugging/: graph_align_output.txt
GRAAL/headers/: GDV_functions.hpp  GPUGDV_functions.hpp  bfs.hpp  class_definitions.hpp  combinations.hpp  combinations_raw.hpp  gpubfs.hpp  print_disconnected_graph.hpp  raw_vecs.hpp
GRAAL/parallel_graph_align/: bfs.hpp  fido_paths.config  gdv_functions.hpp  graph_align_par.sh  graph_align_par_lsf.sh  graph_alignment  lsf_graph_align.sh  main_code_parallel.cpp  main_code_parallel.cpp~  makefile  makefile~  none_graph_align.sh  slurm_graph_align.sh  test_runtimes.txt  time_results.txt
GRAAL/test_graphs/: graph_slice3.txt  sgraph3.txt
GRAAL/visualization/: gdv_bar_graph.py  graph_size_vis.py  load_imbalance_bar.py  load_imbalance_box.py  runtime_visualization.py  strong_speedup_vis.py
Pre-Processing/: Event_graph_dataset_preprocessing.py  file_finder.sh  graph_to_txt.py
data/: dolphins.txt  event_graph_msgrace_niters_10_nprocs_256_msgsize_1_run_2_size_59684.txt  karate_undir.txt
dev-scripts/: autoformat.sh  run-clang-format.py
fido/: CMakeLists.txt  main_code.cpp  makefile  orbit_list.txt  orbit_signatures.txt
fido/config/: CMakeLists.txt  EssensConfig.cmake.in  fido_compile_config.h.in  fido_paths.config
fido/headers/: GDV_functions.hpp  class_definitions.hpp  combinations.hpp  dirty_page_tracking.hpp  hash_change_detection.hpp  kokkos_functions.hpp
fido/include/: GDV_functions.hpp  class_definitions.hpp  combinations.hpp  fido_compile_config.h  kokkos_functions.hpp
fido/parallel_graph_align/: fido_paths.config  graph_align_job.sh  graph_align_par.sh  graph_align_sched.sh  igraph_convert_txt_graphml.py  lsf_graph_align.sh  main_code_parallel.cpp  makefile  mpi_supp_samp.supp  nk_convert_graphml_metis.py  node_deg_count.cpp  none_graph_align.sh  slurm_graph_align.sh  static_assigner.cpp
fido/src/: main.cpp  node_deg_count.cpp
fido/strong_scaling_txt/: event_graph_msgrace_niters_10_nprocs_128_msgsize_1_run_1_size_29732.txt  slice_1_amg2013_niters_2_nprocs_16_msg_size_1024_run_002_size_1952.txt  slice_1_message_race_niters_10_nprocs_16_msg_size_512_run_002_size_332.txt  slice_5_amg2013_niters_5_nprocs_64_msgsize_1_run_2_size_80768.txt  slice_5_msgrace_niters_10_nprocs_256_msgsize_1_run_1_size_5612.txt  unfm_256v_r1.txt
fido/test_graphs/: sgraph1.txt  sgraph2.txt
fido/visualization/: deg_count_bar.py  load_imbalance_bar.py  load_imbalance_box.py  speedup_loss_vis.py  vis_strong_speedup.py  vis_strong_speedup_procs.py  vis_strong_speedup_threads.py
include/: bfs.hpp  class_definitions.hpp  combinations.hpp  deduplication.hpp  dirty_page_tracking.hpp  graph.hpp  hash_change_detection.hpp  hash_functions.hpp  io.hpp  kokkos_functions.hpp  orbitmatch.hpp  update_pattern_analysis.hpp  utils.hpp
install/: install_fido.sh  install_kokkos-kernels.sh  install_kokkos-tools.sh  install_kokkos.sh
scheduling/: graph_align_job.sh  graph_align_par.sh  graph_align_sched.sh
scripts/: benchmark_asia_osm.sh  benchmark_hugebubbles.sh  benchmark_msg_race.sh  benchmark_unstr_mesh.sh  checkpoint_test_lsf.sh  compression_tests.sh  distributed_test.sh  distributed_test128.sh  distributed_test16.sh  distributed_test2.sh  distributed_test32.sh  distributed_test4.sh  distributed_test64.sh  distributed_test8.sh  example_build_script.sh  hugebubbles_polaris.sh  icpp_scaling_test.sh  icpp_vary_chkpt_freq_test.sh  icpp_vary_chunk_size_test.sh  message_race_polaris.sh  osm_polaris.sh  unstructured_mesh_polaris.sh
scripts/visualization/: graph_size_vis.py  load_imbalance_bar.py  strong_speedup_vis.py  vis_strong_speedup.py
src/: io.cpp  main.cpp  oranges.cpp  update_pattern_analysis.cpp
test_graphs/: graphn1.txt
test_graphs/strong_scaling/: event_graph_msgrace_niters_10_nprocs_128_msgsize_1_run_2_size_29732.txt  event_graph_msgrace_niters_10_nprocs_256_msgsize_1_run_1_size_59684.txt  event_graph_msgrace_niters_10_nprocs_48_run_1_size_11012.txt  event_graph_msgrace_niters_10_nprocs_48_run_2_size_11012.txt  event_graph_msgrace_niters_10_nprocs_64_run_1_size_14756.txt  event_graph_msgrace_niters_10_nprocs_64_run_2_size_14756.txt  slice_5_amg2013_niters_5_nprocs_64_msgsize_1_run_1_size_80768.txt  slice_5_msgrace_niters_10_nprocs_256_msgsize_1_run_2_size_5612.txt  unfm_256v_r2.txt  unfm_rmat_10_0_0.25_0.25_0.25_0.25_run_2.txt
tests/: CombinationTests.cpp  GraphTests.cpp  OrbitTests.cpp  RelabelGraph.cpp
